--- a/CSS/style.css
+++ b/CSS/style.css
@@ -17,7 +17,7 @@ body {
 .header {
     display: flex;
     flex-direction: row;
-    position: fixed;
+    position: sticky;
     top: 0;
     left: 0;
     width: 100%;
